--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -90,23 +90,23 @@ jobs:
         git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}
         git clone ${{env.PATCHES_REPO}}
         cd kernel_platform
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./${env.KERNELSU_NAME}/
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./common/${env.KERNELSU_NAME}/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch ./common/
         cp -r ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp -r ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
         
         # 启用补丁
-        cd ./${env.KERNELSU_NAME}
+        cd ./common/${env.KERNELSU_NAME}
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
-        cd ../common
+        cd ..
         patch -p1 < 50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch || true
-        cp ../kernel_patches/69_hide_stuff.patch ./
+        cp ../../kernel_patches/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
-        cp ../kernel_patches/apk_sign.c_fix.patch ./
+        cp ../../kernel_patches/apk_sign.c_fix.patch ./
         patch -p1 -F 3 < apk_sign.c_fix.patch
-        cp ../kernel_patches/core_hook.c_fix.patch ./
+        cp ../../kernel_patches/core_hook.c_fix.patch ./
         patch -p1 --fuzz=3 < core_hook.c_fix.patch
-        cp ../kernel_patches/selinux.c_fix.patch ./
+        cp ../../kernel_patches/selinux.c_fix.patch ./
         patch -p1 -F 3 < selinux.c_fix.patch
         
     - name: 编译内核
