--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -27,7 +27,6 @@ on:
 env:
   GIT_USER_NAME: yuanqiongyoukong
   GIT_USER_EMAIL: 413722718@qq.com
-  KERNEL_DIR: kernel
   KERNELSU_NAME: KernelSU-Next
   KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git
   KERNELSU_URL: https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh
@@ -65,7 +64,7 @@ jobs:
         
     - name: 拉取内核清单
       run: |
-        mkdir ${KERNEL_DIR} && cd ${KERNEL_DIR}
+        mkdir kernel && cd kernel
         repo init -u ${{env.KERNEL_MANIFEST_URL}} -b refs/heads/oneplus/${{github.event.inputs.CPU}} -m ${{github.event.inputs.FEIL}}.xml --depth=1
         repo sync
         sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
@@ -77,7 +76,7 @@ jobs:
         
     - name: 设置 KernelSU Next
       run: |
-        cd ${KERNEL_DIR}/kernel_platform
+        cd kernel/kernel_platform
         curl -LSs ${{env.KERNELSU_URL}} | bash -s next
         cd ${KERNELSU_NAME}
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
@@ -86,7 +85,7 @@ jobs:
         
     - name: 添加 SUSFS
       run: |
-        cd ${KERNEL_DIR}
+        cd kernel
         git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}
         git clone ${{env.PATCHES_REPO}}
         cd kernel_platform
@@ -111,14 +110,14 @@ jobs:
         
     - name: 编译内核
       run: |
-        cd ${KERNEL_DIR}
+        cd kernel
         ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{github.event.inputs.CPUD}} gki
         
     - name: 制作 AnyKernel3
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf AnyKernel3/.git
-        cp ${KERNEL_DIR}/out/dist/Image ./AnyKernel3/
+        cp kernel/out/dist/Image ./AnyKernel3/
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
@@ -130,4 +129,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Image-${KERNELSU_NAME}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: ${KERNEL_DIR}/out/dist/Image
+        path: kernel/out/dist/Image
