--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -64,7 +64,7 @@ jobs:
         
     - name: 拉取内核清单
       run: |
-        mkdir kernel && cd kernel
+        mkdir kernel_workspace && cd kernel_workspace
         repo init -u ${{env.KERNEL_MANIFEST_URL}} -b refs/heads/oneplus/${{github.event.inputs.CPU}} -m ${{github.event.inputs.FEIL}}.xml --depth=1
         repo sync
         sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
@@ -76,7 +76,7 @@ jobs:
         
     - name: 设置 KernelSU Next
       run: |
-        cd kernel/kernel_platform
+        cd kernel_workspace/kernel_platform
         curl -LSs ${{env.KERNELSU_URL}} | bash -s next
         cd ${KERNELSU_NAME}
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
@@ -85,11 +85,11 @@ jobs:
         
     - name: 添加 SUSFS
       run: |
-        cd kernel
+        cd kernel_workspace
         git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}
         git clone ${{env.PATCHES_REPO}}
         cd kernel_platform
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./kernel/${KERNELSU_NAME}/
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./kernel_workspace/${KERNELSU_NAME}/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch ./common/
         cp -r ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp -r ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
@@ -110,14 +110,14 @@ jobs:
         
     - name: 编译内核
       run: |
-        cd kernel
+        cd kernel_workspace
         ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{github.event.inputs.CPUD}} gki
         
     - name: 制作 AnyKernel3
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf AnyKernel3/.git
-        cp kernel/out/dist/Image ./AnyKernel3/
+        cp kernel_workspace/out/dist/Image ./AnyKernel3/
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
@@ -129,4 +129,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Image-${KERNELSU_NAME}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: kernel/out/dist/Image
+        path: kernel_workspace/out/dist/Image
