--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -67,9 +67,12 @@ jobs:
         mkdir -p kernel_workspace && cd kernel_workspace 
         repo init -u ${{env.KERNEL_MANIFEST_URL}} -b refs/heads/oneplus/${{github.event.inputs.CPU}}  -m ${{github.event.inputs.FEIL}}.xml  --depth=1 
         repo sync 
-        sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh 
         rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || echo "No protected exports found!"
         sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion kernel_platform/msm-kernel/scripts/setlocalversion
+        sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
+        # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' kernel_platform/oplus/build/oplus_setup.sh                 # 禁用图像打包
+        # sed -i 's/local default_value=none/local default_value=thin/Ig' kernel_platform/oplus/build/oplus_setup.sh              # 设置默认值为thin
+        # sed -i 's/local default_value=enable/local default_value=disable/Ig' kernel_platform/oplus/build/oplus_setup.sh         # 设置默认值为禁用
         
     - name: 设置 KernelSU Next 
       run: |
@@ -98,10 +101,6 @@ jobs:
         patch -p1 < 50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch  || true 
         cp ../../kernel_patches/69_hide_stuff.patch  ./
         patch -p1 -F 3 < 69_hide_stuff.patch 
-        git add -A && git commit -a -m "BUILD Kernel"
-        cd ..
-        cd ./msm-kernel && git add -A && git commit -a -m "BUILD Kernel"
-        cd ..
         cp ../kernel_patches/apk_sign.c_fix.patch  ./
         patch -p1 -F 3 < apk_sign.c_fix.patch  
         cp ../kernel_patches/core_hook.c_fix.patch  ./
