--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -1,5 +1,5 @@
-name: 构建 ACE3 内核 
- 
+name: 构建 ACE3 内核
+
 on:
   workflow_dispatch:
     inputs:
@@ -23,17 +23,17 @@ on:
         description: "内核版本"
         required: true 
         default: '5.15'
-        
+
 env:
   GIT_USER_NAME: yuanqiongyoukong
-  GIT_USER_EMAIL: 413722718@qq.com  
+  GIT_USER_EMAIL: 413722718@qq.com   
   KERNELSU_NAME: KernelSU-Next
-  KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git 
-  KERNELSU_URL: https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh 
-  SUSFS_REPO: https://gitlab.com/simonpunk/susfs4ksu.git 
-  PATCHES_REPO: https://github.com/TheWildJames/kernel_patches.git 
-  ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3 
- 
+  KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git  
+  KERNELSU_URL: https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh  
+  SUSFS_REPO: https://gitlab.com/simonpunk/susfs4ksu.git  
+  PATCHES_REPO: https://github.com/TheWildJames/kernel_patches.git  
+  ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -51,28 +51,24 @@ jobs:
         
     - name: 配置 Git
       run: |
-        git config --global user.name  "${GIT_USER_NAME}"
-        git config --global user.email  "${GIT_USER_EMAIL}"
+        git config --global user.name   "${GIT_USER_NAME}"
+        git config --global user.email   "${GIT_USER_EMAIL}"
         
     - name: 安装编译环境
       run: |
-        sudo apt update && sudo apt upgrade -y 
-        sudo apt install -y python3 git curl
-        curl -o ~/repo https://storage.googleapis.com/git-repo-downloads/repo 
+        sudo apt update && sudo apt upgrade -y && sudo apt install -y python3 git curl
+        curl -o ~/repo https://storage.googleapis.com/git-repo-downloads/repo  
         chmod a+x ~/repo
         sudo mv ~/repo /usr/local/bin/repo
         
     - name: 拉取内核清单
       run: |
-        mkdir -p kernel_workspace && cd kernel_workspace 
+        mkdir kernel_workspace && cd kernel_workspace 
         repo init -u ${{env.KERNEL_MANIFEST_URL}} -b refs/heads/oneplus/${{github.event.inputs.CPU}}  -m ${{github.event.inputs.FEIL}}.xml  --depth=1 
         repo sync 
         rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || echo "No protected exports found!"
         sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion kernel_platform/msm-kernel/scripts/setlocalversion
-        sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
-        # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' kernel_platform/oplus/build/oplus_setup.sh                 # 禁用图像打包
-        # sed -i 's/local default_value=none/local default_value=thin/Ig' kernel_platform/oplus/build/oplus_setup.sh              # 设置默认值为thin
-        # sed -i 's/local default_value=enable/local default_value=disable/Ig' kernel_platform/oplus/build/oplus_setup.sh         # 设置默认值为禁用
+        sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh 
         
     - name: 设置 KernelSU Next 
       run: |
@@ -86,48 +82,44 @@ jobs:
     - name: 添加 SUSFS
       run: |
         cd kernel_workspace 
-        git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}} 
+        git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}  
         git clone ${{env.PATCHES_REPO}}
         cd kernel_platform
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch  ./${KERNELSU_NAME}/
-        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch  ./common/
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch   ./${KERNELSU_NAME}/
+        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch   ./common/
         cp -r ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp -r ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
         
         # 应用补丁
         cd ${KERNELSU_NAME}
-        patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || true
+        patch -p1 --forward < 10_enable_susfs_for_ksu.patch   || true
         cd ..
-        patch -p1 < 50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch  || true 
+        patch -p1 < 50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch   || true 
         cd ../../
-        cp kernel_patches/69_hide_stuff.patch  ./
-        patch -p1 -F 3 < 69_hide_stuff.patch 
-        cp kernel_patches/apk_sign.c_fix.patch  ./
-        patch -p1 -F 3 < apk_sign.c_fix.patch  
-        cp kernel_patches/core_hook.c_fix.patch  ./
-        patch -p1 --fuzz=3 < ./core_hook.c_fix.patch 
-        cp kernel_patches/selinux.c_fix.patch  ./
-        patch -p1 -F 3 < selinux.c_fix.patch 
+        for patch in 69_hide_stuff.patch  apk_sign.c_fix.patch  core_hook.c_fix.patch  selinux.c_fix.patch;  do
+          cp kernel_patches/$patch .
+          patch -p1 -F 3 < $patch
+        done
         
     - name: 编译内核
       run: |
         cd kernel_workspace
-        ./kernel_platform/oplus/build/oplus_build_kernel.sh  ${{github.event.inputs.CPUD}}  gki
+        ./kernel_platform/oplus/build/oplus_build_kernel.sh   ${{github.event.inputs.CPUD}}   gki
         
     - name: 制作 AnyKernel3
       run: |
-        git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
+        git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf ./AnyKernel3/.git
         cp kernel_workspace/kernel_platform/out/dist/Image ./AnyKernel3/
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
-        name: AnyKernel3_${KERNELSU_NAME}_${env.KSUVER}_${{github.event.inputs.FEIL}} 
+        name: AnyKernel3_${KERNELSU_NAME}_${env.KSUVER}_${{github.event.inputs.FEIL}}  
         path: ./AnyKernel3/*
         
     - name: 上传镜像
       uses: actions/upload-artifact@v4
       with:
-        name: Image-${KERNELSU_NAME}_${env.KSUVER}_${{github.event.inputs.FEIL}} 
-        path: kernel_workspace/kernel_platform/out/dist/Image 
+        name: Image-${KERNELSU_NAME}_${env.KSUVER}_${{github.event.inputs.FEIL}}  
+        path: kernel_workspace/kernel_platform/out/dist/Image
