--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -72,7 +72,7 @@ jobs:
         
     - name: 设置 KernelSU Next 
       run: |
-        cd kernel_workspace/kernel_platform
+        cd kernel_workspace/kernel_platform/common
         curl -LSs ${{env.KERNELSU_URL}} | bash -s next
         cd ${KERNELSU_NAME}
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
@@ -85,21 +85,24 @@ jobs:
         git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}  
         git clone ${{env.PATCHES_REPO}}
         cd kernel_platform
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch   ./${KERNELSU_NAME}/
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch   ./common/${KERNELSU_NAME}/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch   ./common/
         cp -r ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp -r ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
         
         # 应用补丁
-        cd ${KERNELSU_NAME}
-        patch -p1 --forward < 10_enable_susfs_for_ksu.patch   || true
+        cd ./common/${KERNELSU_NAME}
+        patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         cd ..
-        patch -p1 < 50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch   || true 
-        cd ../../
-        for patch in 69_hide_stuff.patch  apk_sign.c_fix.patch  core_hook.c_fix.patch  selinux.c_fix.patch;  do
-          cp kernel_patches/$patch .
-          patch -p1 -F 3 < $patch
-        done
+        patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
+        cp ../../kernel_patches/69_hide_stuff.patch ./
+        patch -p1 -F 3 < 69_hide_stuff.patch
+        cp ../../kernel_patches/apk_sign.c_fix.patch ./
+        patch -p1 -F 3 < apk_sign.c_fix.patch
+        cp ../../kernel_patches/core_hook.c_fix.patch ./
+        patch -p1 --fuzz=3 < ./core_hook.c_fix.patch
+        cp ../../kernel_patches/selinux.c_fix.patch ./
+        patch -p1 -F 3 < selinux.c_fix.patch
         
     - name: 编译内核
       run: |
@@ -110,7 +113,7 @@ jobs:
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf ./AnyKernel3/.git
-        cp kernel_workspace/kernel_platform/out/dist/Image ./AnyKernel3/
+        cp kernel_workspace/out/dist/Image ./AnyKernel3/
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
@@ -122,4 +125,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Image-${KERNELSU_NAME}_${env.KSUVER}_${{github.event.inputs.FEIL}}  
-        path: kernel_workspace/kernel_platform/out/dist/Image
+        path: kernel_workspace/out/dist/Image
