--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -114,19 +114,17 @@ jobs:
         
     - name: 制作 AnyKernel3
       run: |
-        mkdir AnyKernel3 && cd AnyKernel3
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
-        rm -rf ./AnyKernel3/.git
-        cp kernel_workspace/out/dist/Image ./AnyKernel3/
+        cp ./out/dist/Image ./AnyKernel3/Image
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
         name: AnyKernel3_${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: ./AnyKernel3/*
+        path: ./*.zip
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
         name: Image-${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: kernel_workspace/out/dist/Image
+        path: ./out/dist/Image
