--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -116,16 +116,16 @@ jobs:
       run: |
         cd kernel_workspace
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
-        cp ./out/dist/Image ./AnyKernel3/Image
+        cp kernel_workspace/out/dist/Image kernel_workspace/AnyKernel3/Image
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
         name: AnyKernel3_${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: ./*.zip
+        path: kernel_workspace/AnyKernel3.zip
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
         name: Image-${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: ./out/dist/Image
+        path: kernel_workspace/out/dist/Image
