--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -114,18 +114,18 @@ jobs:
         
     - name: 制作 AnyKernel3
       run: |
-        cd kernel_workspace
+        cd kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist/
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
-        cp kernel_workspace/out/dist/Image kernel_workspace/AnyKernel3/Image
+        cp ./Image ./AnyKernel3/Image
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
         name: AnyKernel3_${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: kernel_workspace/AnyKernel3.zip
+        path: ./AnyKernel3.zip
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
         name: Image-${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: kernel_workspace/out/dist/Image
+        path: ./Image
