--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -114,9 +114,9 @@ jobs:
         
     - name: 制作 AnyKernel3
       run: |
-        cd kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist/
+        cd kernel_workspace
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
-        cp ./Image ./AnyKernel3/Image
+        cp ./kernel_platform/out/msm-kernel-${{github.event.inputs.CPUD}}-gki/dist/Image ./AnyKernel3/Image
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
@@ -128,4 +128,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Image-${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: ./Image
+        path: ./kernel_platform/out/msm-kernel-${{github.event.inputs.CPUD}}-gki/dist/Image
