--- a/.github/workflows/kernel_ace3.yml
+++ b/.github/workflows/kernel_ace3.yml
@@ -112,20 +112,20 @@ jobs:
         cd kernel_workspace
         ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{github.event.inputs.CPUD}} gki
         
-    - name: 制作 AnyKernel3
-      run: |
-        cd kernel_workspace
-        git clone ${{env.ANYKERNEL3_REPO}} --depth=1
-        cp kernel_workspace/kernel_platform/out/msm-kernel-${{github.event.inputs.CPUD}}-gki/dist/Image kernel_workspace/AnyKernel3/Image
-        
-    - name: 上传 AnyKernel3
-      uses: actions/upload-artifact@v4
-      with:
-        name: AnyKernel3_${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: kernel_workspace/AnyKernel3.zip
-        
-    - name: 上传 Image
-      uses: actions/upload-artifact@v4
-      with:
-        name: Image-${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: kernel_workspace/kernel_platform/out/msm-kernel-${{github.event.inputs.CPUD}}-gki/dist/Image
+          - name: Make AnyKernel3
+        run: |
+         git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
+         rm -rf ./AnyKernel3/.git
+         cp kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist/Image ./AnyKernel3/
+
+      - name: Upload AnyKernel3
+        uses: actions/upload-artifact@v4
+        with:
+         name: AnyKernel3_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
+         path: ./AnyKernel3/*
+
+      - name: Upload Image
+        uses: actions/upload-artifact@v4
+        with:
+         name: Image_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
+         path: kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist/Image
