--- a/.github/workflows/KernelSU-Next.yml
+++ b/.github/workflows/KernelSU-Next.yml
@@ -73,7 +73,7 @@ jobs:
         # sed -i 's/local default_value=none/local default_value=thin/Ig' kernel_platform/oplus/build/oplus_setup.sh              # 设置默认值为thin
         # sed -i 's/local default_value=enable/local default_value=disable/Ig' kernel_platform/oplus/build/oplus_setup.sh         # 设置默认值为禁用
         
-    - name: 设置 KernelSU Next
+    - name: 设置 KernelSU
       run: |
         cd kernel/kernel_platform/common
         curl -LSs ${{env.KERNELSU_URL}} | bash -s next
