--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -98,13 +98,15 @@ jobs:
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         cd ..
         patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
-        cp ../../kernel_patches/69_hide_stuff.patch ./
+        cd ../../../
+        sed -i -e 's/KernelSU-Next/KernelSU/g' apk_sign.c_fix.patch  core_hook.c_fix.patch  selinux.c_fix.patch 
+        cp 69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
-        cp ../../kernel_patches/apk_sign.c_fix.patch ./
+        cp apk_sign.c_fix.patch ./
         patch -p1 -F 3 < apk_sign.c_fix.patch
-        cp ../../kernel_patches/core_hook.c_fix.patch ./
+        cp core_hook.c_fix.patch ./
         patch -p1 --fuzz=3 < ./core_hook.c_fix.patch
-        cp ../../kernel_patches/selinux.c_fix.patch ./
+        cp selinux.c_fix.patch ./
         patch -p1 -F 3 < selinux.c_fix.patch
         
     - name: 编译内核
