--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -91,6 +91,7 @@ jobs:
         cd ${{env.WORKSPACE_DIR}}
         git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}
         git clone ${{env.PATCHES_REPO}}
+        sed -i -e 's/KernelSU-Next/KernelSU/g' kernel_patches/apk_sign.c_fix.patch kernel_patches/core_hook.c_fix.patch kernel_patches/selinux.c_fix.patch
         cd ${{env.PLATFORM_DIR}}
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./common/${KERNELSU_DIR}/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch ./common/
@@ -102,7 +103,6 @@ jobs:
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         cd ..
         patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
-        sed -i -e 's/KernelSU-Next/KernelSU/g' kernel_workspace/kernel_patches/apk_sign.c_fix.patch kernel_workspace/kernel_patches/core_hook.c_fix.patch kernel_workspace/kernel_patches/selinux.c_fix.patch 
         cp ../../kernel_patches/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
         cp ../../kernel_patches/apk_sign.c_fix.patch ./
